--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
+    "leaflet-routing-machine": "^3.2.12",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "@types/node": "^22.7.4",
     "@types/prop-types": "^15.7.13",
     "@types/react": "^18",
